--- a/c2/week1/3.Gradient+Checking.ipynb
+++ b/c2/week1/3.Gradient+Checking.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
     "    ### END CODE HERE ###\n",
     "    \n",
     "    ### START CODE HERE ### (approx. 1 line)\n",
-    "    numerator = np.linalg.norm(grad) - np.linalg.norm(gradapprox)                               # Step 1'\n",
+    "    numerator = np.linalg.norm(grad - gradapprox)                               # Step 1'\n",
     "    denominator = np.linalg.norm(grad) + np.linalg.norm(gradapprox)                            # Step 2'\n",
     "    difference = numerator / denominator                              # Step 3'\n",
     "    ### END CODE HERE ###\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -281,7 +281,7 @@
      "output_type": "stream",
      "text": [
       "The gradient is correct!\n",
-      "difference = -2.91933588329e-10\n"
+      "difference = 2.919335883291695e-10\n"
      ]
     }
    ],
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -560,7 +560,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[92mYour backward propagation works perfectly fine! difference = 2.38454544954e-08\u001b[0m\n"
+      "\u001b[92mYour backward propagation works perfectly fine! difference = 2.3864601858234383e-08\u001b[0m\n"
      ]
     }
    ],
@@ -635,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
